Fixed wrong width of `<aside>`. #265
the side menu was too narrow in mobile mode.
Now it is fixed and as wide as before.

--- a/public/style.css
+++ b/public/style.css
@@ -147,7 +147,8 @@ aside.flagged {
 
 @media (max-width: 799px) {
     aside {
-        left: calc(min(20%, 260px) * -1);
+        width: max(20%, 260px);
+        left: calc(max(20%, 260px) * -1);
         z-index: 2;
         height: calc(100% - 40px);
         background-color: #ffffff;
